<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_judul_wisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_judul_wisata"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@android:color/darker_gray"

                android:layout_marginRight="16dp"
                />



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_detail_wiata"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"

            android:layout_marginBottom="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="18dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

                <TextView
                    android:id="@+id/txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/kecamatan"
                    android:textColor="@android:color/black"
                    />



                <TextView
                    android:id="@+id/tv_set_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_content_detail_wisata"
                    android:textColor="@android:color/black"
                    />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_deskripsi"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/black"

            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="18dp"
            >
            <TextView
                android:id="@+id/tv_set_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_deskripsi"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>